--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -35,8 +35,8 @@ on:
 
 env:
   python_version: '3.11'
-  java_version: '11'
-  java_distribution: 'temurin'
+  java_version: '17'
+  java_distribution: 'zulu'
 
 jobs:
   validate_gradle_wrapper:
