--- a/app/gui/build.gradle
+++ b/app/gui/build.gradle
@@ -17,7 +17,7 @@
 plugins {
     id 'application'
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    alias(libs.plugins.shadow.jar)
 }
 
 mainClassName = 'org.mobilitydata.gtfsvalidator.app.gui.Main'
