--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -15,7 +15,7 @@
  */
 
 plugins {
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
+    alias(libs.plugins.shadow.jar)
     id 'application'
     id 'java'
 }
