--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '5.2.0'
     id 'java'
     id 'application'
+    alias(libs.plugins.shadow.jar)
 }
 
 dependencies {
