--- a/.github/workflows/test_pack_doc.yml
+++ b/.github/workflows/test_pack_doc.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java_version: [ 11, 17 ]
+        java_version: [ '17' ]
         os: [ ubuntu-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v3
@@ -27,7 +27,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java_version }}
-          distribution: 'temurin'
+          distribution: 'zulu'
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
@@ -37,7 +37,6 @@ jobs:
       - name: Run tests on Java ${{ matrix.java_version }} and ${{ matrix.os }}
         uses: gradle/gradle-build-action@v2
         with:
-          # We run test aggregation with --continue to make sure all tests run, even if some fail.
           arguments: testAggregateTestReport --continue
       - name: Persist aggregated test reports on failure - Java ${{ matrix.java_version }} on ${{ matrix.os }}
         if: ${{ failure() }}
@@ -51,7 +50,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java_version: [ 11, 17 ]
+        java_version: [ '17' ]
         os: [ ubuntu-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v3
@@ -59,7 +58,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java_version }}
-          distribution: 'temurin'
+          distribution: 'zulu'
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
@@ -75,12 +74,13 @@ jobs:
         with:
           name: Application - CLI executable - Java ${{ matrix.java_version }} JAR file -- ${{ matrix.os }}
           path: cli/build/libs/gtfs-validator-*-cli.jar
+
   doc:
     needs: [test]
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java_version: [ 11, 17 ]
+        java_version: [ '17' ]
         os: [ ubuntu-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v3
@@ -88,7 +88,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.java_version }}
-          distribution: 'temurin'
+          distribution: 'zulu'
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
@@ -102,5 +102,5 @@ jobs:
       - name: Persist javadoc
         uses: actions/upload-artifact@v4
         with:
-          name: Documentation - javadoc - Java ${{ matrix.java_version }} - ${{ matrix.java_version }}
+          name: Documentation - javadoc - Java ${{ matrix.java_version }} - ${{ matrix.os }}
           path: build/docs/javadoc/
