feat: added support + automated documentation extraction for summary metadata

--- a/processor/summary/build.gradle
+++ b/processor/summary/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 Google LLC, MobilityData IO
+ * Copyright 2025 MobilityData
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -27,6 +27,7 @@ repositories {
 
 dependencies {
     implementation project(':model')
+    implementation project(':processor:notices')
     annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
     compileOnly 'com.google.auto.service:auto-service:1.0.1'
     implementation 'org.apache.commons:commons-lang3:3.0'
