--- a/main/build.gradle
+++ b/main/build.gradle
@@ -24,8 +24,13 @@ plugins {
 //    publishing and signing are done in gtfs-validator build.gradle to minimize repetition
 //}
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["-AsummaryMetadataOutputDir=${project.rootDir}/web/client/static"]
+}
+
 dependencies {
     annotationProcessor project(':processor:notices')
+    annotationProcessor project(':processor:summary')
     annotationProcessor project(':processor')
     compileOnly project(':processor')
     implementation project(':model')
@@ -34,7 +39,7 @@ dependencies {
     compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
     implementation 'javax.inject:javax.inject:1'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'com.google.flogger:flogger:0.6'
     implementation 'com.google.flogger:flogger-system-backend:0.6'
@@ -48,4 +53,6 @@ dependencies {
     testImplementation 'com.google.truth:truth:1.0.1'
     testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
     testImplementation 'org.mockito:mockito-core:4.5.1'
+    testImplementation project(':processor:summary')
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
 }
