--- a/web/client/.gitignore
+++ b/web/client/.gitignore
@@ -10,6 +10,7 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 /notice_schema.json
 rules.json
+summary-metadata.json
 cypress/screenshots/
 cypress/videos/
 /static/RULES.md
