--- a/processor/notices/build.gradle
+++ b/processor/notices/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation project(':model')
     annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
     compileOnly 'com.google.auto.service:auto-service:1.0.1'
-    implementation 'org.apache.commons:commons-lang3:3.0'
+    implementation libs.commons.lang3
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
