resolved com.google.auto.service:auto-service version inconsistency

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 spotless = "7.0.2"
 shadow-jar = "7.1.2"
 apacheCommonsLang = "3.6"
+autoService = "1.0.1"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
@@ -9,3 +10,4 @@ shadow-jar = { id = "com.github.johnrengelman.shadow", version.ref = "shadow-jar
 
 [libraries]
 commons-lang3 = { module = "org.apache.commons:commons-lang3", version.ref = "apacheCommonsLang" }
+auto-service = { module = "com.google.auto.service:auto-service", version.ref = "autoService" }
