--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -5,8 +5,8 @@ plugins {
 dependencies {
     implementation project(':model')
     implementation project(':core')
-    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc4'
-    compileOnly 'com.google.auto.service:auto-service:1.0-rc4'
+    annotationProcessor libs.auto.service
+    compileOnly libs.auto.service
     annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
     compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
     implementation 'javax.inject:javax.inject:1'
