--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -52,8 +52,8 @@ dependencies {
     implementation project(':main')
     implementation 'com.beust:jcommander:1.48'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.google.flogger:flogger:0.6'
-    implementation 'com.google.flogger:flogger-system-backend:0.6'
+    implementation libs.flogger
+    implementation libs.flogger.system.backend
     implementation 'com.google.guava:guava:31.0.1-jre'
 
     testImplementation group: 'junit', name: 'junit', version: '4.13'
