--- a/main/build.gradle
+++ b/main/build.gradle
@@ -36,8 +36,8 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.guava:guava:31.0.1-jre'
-    implementation 'com.google.flogger:flogger:0.6'
-    implementation 'com.google.flogger:flogger-system-backend:0.6'
+    implementation libs.flogger
+    implementation libs.flogger.system.backend
     implementation 'com.univocity:univocity-parsers:2.9.0'
     implementation 'com.google.geometry:s2-geometry:2.0.0'
     implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
