--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     implementation 'com.squareup:javapoet:1.13.0'
     implementation libs.commons.lang3
     implementation 'com.google.guava:guava:31.0.1-jre'
-    implementation 'com.google.flogger:flogger:0.6'
+    implementation libs.flogger
     implementation 'com.univocity:univocity-parsers:2.9.0'
     implementation 'com.google.geometry:s2-geometry:2.0.0'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
