--- a/processor/tests/build.gradle
+++ b/processor/tests/build.gradle
@@ -26,8 +26,8 @@ dependencies {
     annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
     compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
     implementation 'com.google.guava:guava:31.0.1-jre'
-    implementation 'com.google.flogger:flogger:0.6'
-    implementation 'com.google.flogger:flogger-system-backend:0.6'
+    implementation libs.flogger
+    implementation libs.flogger.system.backend
     implementation 'com.univocity:univocity-parsers:2.9.0'
     testImplementation 'junit:junit:4.13'
     testImplementation 'com.google.truth:truth:1.0.1'
