--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ apacheCommonsLang = "3.6"
 autoService = "1.0.1"
 flogger = "0.6"
 floggerBackend = "0.6"
+gson = "2.8.6"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
@@ -15,3 +16,4 @@ commons-lang3 = { module = "org.apache.commons:commons-lang3", version.ref = "ap
 auto-service = { module = "com.google.auto.service:auto-service", version.ref = "autoService" }
 flogger = { module = "com.google.flogger:flogger", version.ref = "flogger" }
 flogger-system-backend = { module = "com.google.flogger:flogger-system-backend", version.ref = "floggerBackend" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
