--- a/core/build.gradle
+++ b/core/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.2'
     implementation 'commons-io:commons-io:2.8.0'
     implementation 'com.univocity:univocity-parsers:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation libs.gson
     implementation 'com.google.geometry:s2-geometry:2.0.0'
     implementation 'com.google.guava:guava:31.0.1-jre'
     implementation 'commons-validator:commons-validator:1.6'
