--- a/processor/notices/build.gradle
+++ b/processor/notices/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     compileOnly libs.auto.service
     implementation libs.commons.lang3
     implementation 'com.google.guava:guava:31.0.1-jre'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation libs.gson
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation 'com.google.truth:truth:1.1.3'
 }
