--- a/core/build.gradle
+++ b/core/build.gradle
@@ -28,8 +28,8 @@ plugins {
 dependencies {
     implementation project(':model')
     annotationProcessor project(':processor:notices')
-    annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
-    compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
+    annotationProcessor libs.auto.value
+    compileOnly libs.auto.value
     implementation 'org.apache.commons:commons-compress:1.20'
     implementation libs.commons.lang3
     implementation 'javax.inject:javax.inject:1'
