--- a/main/build.gradle
+++ b/main/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     compileOnly project(':processor')
     implementation project(':model')
     implementation project(':core')
-    annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
-    compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
+    annotationProcessor libs.auto.value
+    compileOnly libs.auto.value
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
     implementation 'javax.inject:javax.inject:1'
     implementation libs.gson
