--- a/core/build.gradle
+++ b/core/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.univocity:univocity-parsers:2.9.0'
     implementation libs.gson
     implementation 'com.google.geometry:s2-geometry:2.0.0'
-    implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation libs.guava
     implementation 'commons-validator:commons-validator:1.6'
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.13'
     implementation libs.flogger
