--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ flogger = "0.6"
 floggerBackend = "0.6"
 gson = "2.8.6"
 autoValue = "1.7.4"
+guava = "31.0.1-jre"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
@@ -19,3 +20,4 @@ flogger = { module = "com.google.flogger:flogger", version.ref = "flogger" }
 flogger-system-backend = { module = "com.google.flogger:flogger-system-backend", version.ref = "floggerBackend" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 auto-value = { module = "com.google.auto.value:auto-value", version.ref = "autoValue" }
+guava = { module = "com.google.guava:guava", version.ref = "guava" }
