--- a/main/build.gradle
+++ b/main/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
     implementation 'javax.inject:javax.inject:1'
     implementation libs.gson
-    implementation 'com.google.guava:guava:31.0.1-jre'
+    implementation libs.guava
     implementation libs.flogger
     implementation libs.flogger.system.backend
     implementation 'com.univocity:univocity-parsers:2.9.0'
