--- a/main/build.gradle
+++ b/main/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation libs.guava
     implementation libs.flogger
     implementation libs.flogger.system.backend
-    implementation 'com.univocity:univocity-parsers:2.9.0'
+    implementation libs.univocity.parsers
     implementation 'com.google.geometry:s2-geometry:2.0.0'
     implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
     implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
