--- a/core/build.gradle
+++ b/core/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'javax.inject:javax.inject:1'
     implementation 'org.apache.httpcomponents:httpclient:4.5.2'
     implementation 'commons-io:commons-io:2.8.0'
-    implementation 'com.univocity:univocity-parsers:2.9.0'
+    implementation libs.univocity.parsers
     implementation libs.gson
     implementation 'com.google.geometry:s2-geometry:2.0.0'
     implementation libs.guava
