--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation libs.commons.lang3
     implementation libs.guava
     implementation libs.flogger
-    implementation 'com.univocity:univocity-parsers:2.9.0'
+    implementation libs.univocity.parsers
     implementation 'com.google.geometry:s2-geometry:2.0.0'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation 'com.google.truth:truth:1.0.1'
