--- a/main/build.gradle
+++ b/main/build.gradle
@@ -47,5 +47,5 @@ dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation 'com.google.truth:truth:1.0.1'
     testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
-    testImplementation 'org.mockito:mockito-core:4.5.1'
+    testImplementation libs.mockito.core
 }
