--- a/main/build.gradle
+++ b/main/build.gradle
@@ -31,7 +31,7 @@ dependencies {
     implementation project(':model')
     implementation project(':core')
     annotationProcessor libs.auto.value
-    compileOnly libs.auto.value
+    compileOnly libs.auto.value.annotations
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
     implementation 'javax.inject:javax.inject:1'
     implementation libs.gson
