--- a/model/build.gradle
+++ b/model/build.gradle
@@ -11,7 +11,7 @@ plugins {
 
 dependencies {
     annotationProcessor libs.auto.value
-    compileOnly libs.auto.value
+    compileOnly libs.auto.value.annotations
     implementation 'org.jetbrains:annotations:20.1.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
 }
