--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     implementation 'commons-io:commons-io:2.8.0'
     implementation 'com.google.api-client:google-api-client:1.31.2'
     annotationProcessor libs.auto.value
-    compileOnly libs.auto.value
+    compileOnly libs.auto.value.annotations
     implementation libs.guava
     implementation libs.flogger
     implementation libs.flogger.system.backend
