--- a/processor/tests/build.gradle
+++ b/processor/tests/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation libs.flogger
     implementation libs.flogger.system.backend
     implementation libs.univocity.parsers
-    testImplementation 'junit:junit:4.13'
+    testImplementation libs.junit
     testImplementation 'com.google.truth:truth:1.0.1'
     testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
 }
