--- a/core/build.gradle
+++ b/core/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation 'org.aspectj:aspectjweaver:1.9.20'
     testImplementation libs.flogger.system.backend
     testImplementation group: 'junit', name: 'junit', version: '4.13'
-    testImplementation "com.google.truth:truth:1.0.1"
+    testImplementation libs.truth
     testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
     testImplementation libs.mockito.core
 }
