--- a/main/build.gradle
+++ b/main/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'io.github.classgraph:classgraph:4.8.146'
     implementation 'org.locationtech.jts:jts-core:1.20.0'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
-    testImplementation 'com.google.truth:truth:1.0.1'
+    testImplementation libs.truth
     testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
     testImplementation libs.mockito.core
 }
