--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -17,6 +17,6 @@ dependencies {
     implementation libs.univocity.parsers
     implementation 'com.google.geometry:s2-geometry:2.0.0'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
-    testImplementation 'com.google.truth:truth:1.0.1'
+    testImplementation libs.truth
 }
 
