--- a/processor/notices/build.gradle
+++ b/processor/notices/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation libs.guava
     implementation libs.gson
     testImplementation group: 'junit', name: 'junit', version: '4.13'
-    testImplementation 'com.google.truth:truth:1.1.3'
+    testImplementation libs.truth
 }
 
 test {
