--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ commonsCompress = "1.20"
 mockito = "4.5.1"
 junit = "4.13"
 truth = "1.1.3"
+truthExtension = "1.0.1"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
@@ -33,3 +34,4 @@ commons-compress = { module = "org.apache.commons:commons-compress", version.ref
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 junit = { module = "junit:junit", version.ref = "junit" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
+truth-extension = { module = "com.google.truth.extensions:truth-java8-extension", version.ref = "truthExtension" }
