--- a/main/build.gradle
+++ b/main/build.gradle
@@ -46,6 +46,6 @@ dependencies {
     implementation 'org.locationtech.jts:jts-core:1.20.0'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation libs.truth
-    testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
+    testImplementation libs.truth.extension
     testImplementation libs.mockito.core
 }
