--- a/processor/tests/build.gradle
+++ b/processor/tests/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     implementation libs.univocity.parsers
     testImplementation libs.junit
     testImplementation libs.truth
-    testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
+    testImplementation libs.truth.extension
 }
